coding review data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Coding Review Data</title>
 </head>
 <body>
-    <h1>Codding Review Data</h1>
+    <h1>Coding Review Data</h1>
 </body>
 </html>
